Don't try to obtain the bounding box of a glyph when FontBBox is invalid and CTM is singular. Set an empty box and consider it valid. The bounding box is not used when the CTM is singular. Bug 689614, customer 384.

DIFFERENCES:
None.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@8466 a1074d23-0009-0410-80fe-cf8c14f379e6